Adding content to B4TBR page

--- a/index.html
+++ b/index.html
@@ -6,202 +6,208 @@
 	URL: https://freehtml5.co
 -->
 <html lang="en">
+
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/slick.css">
-	<title>Jenna Ambrose</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <title>Jenna Ambrose</title>
 </head>
+
 <body>
 
-	<!-- Navigation -->
-	<nav class="site-navigation">
-		<div class="site-navigation-inner site-container">
-			<div class="main-navigation">
-				<ul class="main-navigation__ul">
-					<li><a href="/">Homepage</a></li>
-					<li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
-					<li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
-				</ul>
-			</div>
-			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
-				<div class="bar1"></div>
-				<div class="bar2"></div>
-				<div class="bar3"></div>
-			</div>
-			<script>
-				function myFunction(x) {
-					x.classList.toggle("change");
-				}
-			</script>
+    <!-- Navigation -->
+    <nav class="site-navigation">
+        <div class="site-navigation-inner site-container">
+            <div class="main-navigation">
+                <ul class="main-navigation__ul">
+                    <li><a href="/">Homepage</a></li>
+                    <li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
+                    <li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
+                </ul>
+            </div>
+            <div id="myBtn" class="burger-container" onclick="myFunction(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            <script>
+                function myFunction(x) {
+                    x.classList.toggle("change");
+                }
+            </script>
 
-		</div>
-	</nav>
-	<!-- Navigation end -->
+        </div>
+    </nav>
+    <!-- Navigation end -->
 
-	<!-- Top banner -->
-	<section class="fh5co-top-banner">
-		<div class="top-banner__inner site-container">
-			<div class="top-banner__image">
-				<img src="./images/top-banner-author.jpg" alt="author image">
-			</div>
-			<div class="top-banner__text">
-				<div class="top-banner__text-up">
-					<span class="brand-span">Welcome to my Site! I'm</span>
-					<h2 class="top-banner__h2">Jenna</h2>
-				</div>
-				<div class="top-banner__text-down">
-					<h2 class="top-banner__h2">Ambrose</h2>
-					<span class="brand-span">Mother, Author, Cook</span>
-				</div>
-				<a href="#" class="brand-button">Read bio > </a>
-			</div>
-		</div>
-	</section>
-	<!-- Top banner end -->
+    <!-- Top banner -->
+    <section class="fh5co-top-banner">
+        <div class="top-banner__inner site-container">
+            <div class="top-banner__image">
+                <img src="./images/top-banner-author.jpg" alt="author image">
+            </div>
+            <div class="top-banner__text">
+                <div class="top-banner__text-up">
+                    <span class="brand-span">Welcome to my Site! I'm</span>
+                    <h2 class="top-banner__h2">Jenna</h2>
+                </div>
+                <div class="top-banner__text-down">
+                    <h2 class="top-banner__h2">Ambrose</h2>
+                    <span class="brand-span">Mother, Author, Cook</span>
+                </div>
+                <a href="#" class="brand-button">Read bio > </a>
+            </div>
+        </div>
+    </section>
+    <!-- Top banner end -->
 
-	<!-- About me -->
-	<section class="fh5co-about-me">
-		<div class="about-me-inner site-container">
-			<article class="portfolio-wrapper">
-				<div class="portfolio__img">
-					<img src="./images/about-me.jpg" class="about-me__profile" alt="about me profile picture">
-				</div>
-				<div class="portfolio__bottom">
-					<div class="portfolio__name">
-						<span>J</span>
-						<h2 class="universal-h2">enna Ambrose</h2>
-					</div>
-					<p>Jenna Ambrose is a short story author, novelist, and award-winning poet.</p>
-				</div>
-			</article>
-			<div class="about-me__text">
-				<div class="about-me-slider">
-					<div class="about-me-single-slide">
-						<h2 class="universal-h2 universal-h2-bckg">About me</h2>
-						<p><span>J</span> enna Ambrose grew up in the '80's and spent most of her childhood in Fairfax County, Virginia, running barefoot and playing in the woods. In school she was a daydreamer, and consequently struggled. However, in Fourth Grade she had a teacher who spurred her to excel in Creative Writing. During her junior year in High School she decided to start trying harder and went from B's and C's to A's. She graduated from Ohio State with a degree in Occupational Therapy, after which time she worked in her field, as well as many other jobs including volunteer work in Baku, Azerbaijan. In 2000 she married a wonderful man, and they now have five beautiful children. At the inspiration of a friend, she began writing Before the Bell Rings between her second and third pregnancy. As a homeschooling mom, finding time to write wasn't easy. It took a total of fifteen years for Jenna to finalize Before the Bell Rings and get it published. Jenna loves making omelets, snacking on weird food, and reading (especially reading aloud to small children). She has many other stories planned, and will keep writing as God allows.</p>
-						<h4>Author</h4>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="about-me-bckg"></div>
-	</section>
-	<!-- About me end -->
+    <!-- About me -->
+    <section class="fh5co-about-me">
+        <div class="about-me-inner site-container">
+            <article class="portfolio-wrapper">
+                <div class="portfolio__img">
+                    <img src="./images/about-me.jpg" class="about-me__profile" alt="about me profile picture">
+                </div>
+                <div class="portfolio__bottom">
+                    <div class="portfolio__name">
+                        <span>J</span>
+                        <h2 class="universal-h2">enna Ambrose</h2>
+                    </div>
+                    <p>Jenna Ambrose is a short story author, novelist, and award-winning poet.</p>
+                </div>
+            </article>
+            <div class="about-me__text">
+                <div class="about-me-slider">
+                    <div class="about-me-single-slide">
+                        <h2 class="universal-h2 universal-h2-bckg">About me</h2>
+                        <p><span>J</span> enna Ambrose grew up in the '80's and spent most of her childhood in Fairfax County, Virginia, running barefoot and playing in the woods. In school she was a daydreamer, and consequently struggled. However, in Fourth
+                            Grade she had a teacher who spurred her to excel in Creative Writing. During her junior year in High School she decided to start trying harder and went from B's and C's to A's. She graduated from Ohio State with a degree in
+                            Occupational Therapy, after which time she worked in her field, as well as many other jobs including volunteer work in Baku, Azerbaijan. In 2000 she married a wonderful man, and they now have five beautiful children. At the
+                            inspiration of a friend, she began writing Before the Bell Rings between her second and third pregnancy. As a homeschooling mom, finding time to write wasn't easy. It took a total of fifteen years for Jenna to finalize Before
+                            the Bell Rings and get it published. Jenna loves making omelets, snacking on weird food, and reading (especially reading aloud to small children). She has many other stories planned, and will keep writing as God allows.</p>
+                        <h4>Author</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-me-bckg"></div>
+    </section>
+    <!-- About me end -->
 
-	<!-- Books and CD -->
-	<section class="fh5co-books">
-		<div class="site-container">
-			<h2 class="universal-h2 universal-h2-bckg">New Book!</h2>
-			<div class="books">
-				<div class="single-book">
-					<a href="./books/before-the-bell-rings.html" class="single-book__img">
-						<img src="./images/beforeTheBellRings.jpg" width="200" alt="before the bell rings">
-						<div class="single-book_download">
-							<img src="./images/download.svg" alt="book image">
-						</div>
-					</a>
-					<h4 class="single-book__title">Before the Bell Rings</h4>
-					<span class="single-book__price">$12.99</span>
-					<!-- star rating -->
-					<div class="rating" onclick="go('https://www.amazon.com/review/create-review/ref=cm_cr_othr_d_wr_but_top?ie=UTF8&channel=glance-detail&asin=B084Z2SHH9')">
-						<span>&#9734;</span>
-						<span>&#9734;</span>
-						<span>&#9734;</span>
-						<span>&#9734;</span>
-						<span>&#9734;</span>
-					</div>
-					<!-- star rating end -->
-				</div>
-			</div>
-			<!--
+    <!-- Books and CD -->
+    <section class="fh5co-books">
+        <div class="site-container">
+            <h2 class="universal-h2 universal-h2-bckg">New Book!</h2>
+            <div class="books">
+                <div class="single-book">
+                    <a href="./books/before-the-bell-rings.html" class="single-book__img">
+                        <img src="./images/beforeTheBellRings.jpg" width="200" alt="before the bell rings">
+                        <div class="single-book_download">
+                            <img src="./images/download.svg" alt="book image">
+                        </div>
+                    </a>
+                    <h4 class="single-book__title">Before the Bell Rings</h4>
+                    <span class="single-book__price">$12.99</span>
+                    <!-- star rating -->
+                    <div class="rating" onclick="go('https://www.amazon.com/review/create-review/ref=cm_cr_othr_d_wr_but_top?ie=UTF8&channel=glance-detail&asin=B084Z2SHH9')">
+                        <span>&#9734;</span>
+                        <span>&#9734;</span>
+                        <span>&#9734;</span>
+                        <span>&#9734;</span>
+                        <span>&#9734;</span>
+                    </div>
+                    <!-- star rating end -->
+                </div>
+            </div>
+            <!--
 			<div class="books-brand-button">
 				<a href="#" class="brand-button">View more</a>
 			</div>
 			-->
-		</div>
-	</section>
-	<!-- Books and CD end -->
+        </div>
+    </section>
+    <!-- Books and CD end -->
 
-	<!-- Counter -->
-	<div class="fh5co-counter counters">
-		<div class="counter-inner site-container">
-			<div class="single-count">
-				<span class="count" data-count="1"></span>
-				<div class="single-count__text">
-					<img src="./images/counter-1.png" alt="counter icon">
-					<p>Books</p>
-				</div>
-			</div>
-			<div class="single-count">
-				<span class="count" data-count="367"></span>
-				<div class="single-count__text">
-					<img src="./images/counter-2.png" alt="counter icon">
-					<p>Pages</p>
-				</div>
-			</div>
-			<div class="single-count">
-				<span class="count" data-count="12"></span>
-				<div class="single-count__text">
-					<img src="./images/counter-3.png" alt="counter icon">
-					<p>Sales</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Counter -->
+    <!-- Counter -->
+    <div class="fh5co-counter counters">
+        <div class="counter-inner site-container">
+            <div class="single-count">
+                <span class="count" data-count="1"></span>
+                <div class="single-count__text">
+                    <img src="./images/counter-1.png" alt="counter icon">
+                    <p>Books</p>
+                </div>
+            </div>
+            <div class="single-count">
+                <span class="count" data-count="367"></span>
+                <div class="single-count__text">
+                    <img src="./images/counter-2.png" alt="counter icon">
+                    <p>Pages</p>
+                </div>
+            </div>
+            <div class="single-count">
+                <span class="count" data-count="12"></span>
+                <div class="single-count__text">
+                    <img src="./images/counter-3.png" alt="counter icon">
+                    <p>Sales</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Counter -->
 
-	<!-- Quotes -->
-	<section class="fh5co-quotes">
-		<div class="site-container">
-			<div class="about-me-slider">
-				<div>
-					<h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
-					<p>I really enjoyed this book!!! It is one of the best books I have ever read, with lots of adventure and a good romance! Character development is excellent!
-						If you like clean romance mixed with a hint of mystery and a lot of excitement, this book is definitely for you! It is an easy and fun read, and you will be sad when you finish it.</p>
-					<img src="./images/quotes.svg" alt="quotes svg">
-					<h4>Emily Gray</h4>
-					<p>Reader</p>
-				</div>
-				<div>
-					<h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
-					<p>I've read a lot of books and this one was amazing! I couldn't put it down.
-						I would definitely recommend this book for anyone!</p>
-					<img src="./images/quotes.svg" alt="quotes svg">
-					<h4>Noah Broyles</h4>
-					<p>Reader</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Quotes end -->
+    <!-- Quotes -->
+    <section class="fh5co-quotes">
+        <div class="site-container">
+            <div class="about-me-slider">
+                <div>
+                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
+                    <p>I really enjoyed this book!!! It is one of the best books I have ever read, with lots of adventure and a good romance! Character development is excellent! If you like clean romance mixed with a hint of mystery and a lot of excitement,
+                        this book is definitely for you! It is an easy and fun read, and you will be sad when you finish it.</p>
+                    <img src="./images/quotes.svg" alt="quotes svg">
+                    <h4>Emily Gray</h4>
+                    <p>Reader</p>
+                </div>
+                <div>
+                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
+                    <p>I've read a lot of books and this one was amazing! I couldn't put it down. I would definitely recommend this book for anyone!</p>
+                    <img src="./images/quotes.svg" alt="quotes svg">
+                    <h4>Noah Broyles</h4>
+                    <p>Reader</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Quotes end -->
 
-	<!-- Footer -->
-	<footer class="site-footer">
-		<div class="site-container">
-			<div class="footer-inner">
-				<div class="footer-info">
-					<div class="footer-info__left">
-						
-					</div>
-					<div class="footer-info__right">
-						<h5>Get In Touch</h5>
-						<p>Email: <a class="email" href="mailto:jennaambrose74@gmail.com">jennaambrose74@gmail.com</a></p>
-						<a href="mailto:noahbroyles42@gmail.com" class="email">Contact Webmaster</a>
-					</div>
-				</div>
-				<div class="footer-contact-form">
-					<h5>Leave a Comment</h5>
-					<div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
-				</div>
-			</div>
-		</div>
-		<div class="footer-bottom">
-			<div class="site-container footer-bottom-inner">
-				<p>© 2020 Jenna Ambrose | Design by <a href="https://freehtml5.co/" target="_blank">freehtml5.co</a> | All rights Reserved.</p>
-				<!--
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="site-container">
+            <div class="footer-inner">
+                <div class="footer-info">
+                    <div class="footer-info__left">
+
+                    </div>
+                    <div class="footer-info__right">
+                        <h5>Get In Touch</h5>
+                        <p>Email: <a class="email" href="mailto:jennaambrose74@gmail.com">jennaambrose74@gmail.com</a></p>
+                        <a href="mailto:noahbroyles42@gmail.com" class="email">Contact Webmaster</a>
+                    </div>
+                </div>
+                <div class="footer-contact-form">
+                    <h5>Leave a Comment</h5>
+                    <div class="powr-comments" id="80e72aef_1584554768"></div>
+                    <script src="https://www.powr.io/powr.js?platform=html"></script>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="site-container footer-bottom-inner">
+                <p>© 2020 Jenna Ambrose | Design by <a href="https://freehtml5.co/" target="_blank">freehtml5.co</a> | All rights Reserved.</p>
+                <!--
 				<div class="footer-bottom__img">
 					<img src="./images/footer-mastercard.png" alt="footer image">
 					<img src="./images/footer-paypal.png" alt="footer image">
@@ -210,15 +216,16 @@
 					<img src="./images/footer-dhl.png" alt="footer image">
 				</div>
 				-->
-			</div>
-		</div>
-	</footer>
-	<!-- Footer end -->
+            </div>
+        </div>
+    </footer>
+    <!-- Footer end -->
 
-	<!-- Scripts -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/slick.min.js"></script>
-	<script src="js/main.js"></script>
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
+
 </html>
