--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -73,7 +73,7 @@
         </p>
         <br>
         <div class="buynow">
-            <a class="button1" href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894">View on Amazon!</a> 
+            <a class="button1" href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894">View on Amazon</a>
         </div>
         
         
