--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <!-- Counter -->
 	<div class="book-recommendations">
 		<div class="content">
-			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
+			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
 				If you have a recommendation for me I would love to hear about it.
 			</p>
 			<br>
