Added upcoming books

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h4 class="single-book__title">Before the Bell Rings</h4>
                     <span class="single-book__price">$12.99</span>
                     <!-- star rating -->
-                    <div class="rating" onclick="go('https://www.amazon.com/review/create-review/ref=cm_cr_othr_d_wr_but_top?ie=UTF8&channel=glance-detail&asin=B084Z2SHH9')">
+                    <div title="Rate Before the Bell Rings on Amazon" class="rating" onclick="go('https://www.amazon.com/review/create-review/ref=cm_cr_othr_d_wr_but_top?ie=UTF8&channel=glance-detail&asin=B084Z2SHH9')">
                         <span>&#9734;</span>
                         <span>&#9734;</span>
                         <span>&#9734;</span>
@@ -122,7 +122,23 @@
                     </div>
                     <!-- star rating end -->
                 </div>
-            </div>
+			</div>
+			<div class="site-container">
+				<h2 class="universal-h2 universal-h2-bckg">Upcoming Book</h2>
+				<div class="books">
+					<div class="single-book">
+						<h3 class="upcoming-book">City of Refuge</h3>
+						<p class="smaller">
+							Three men ride into Hebron, a city of refuge during the time of David's flight from Saul. One has killed a man. It is up to Eliel the scribe, and his son, Phineas, to discover the details and whether the man is deserving the shelter of the city. Was it an accident? A crime of passion? Envy? Revenge? Or Love?
+						</p>
+					</div>
+				</div>
+				<!--
+				<div class="books-brand-button">
+					<a href="#" class="brand-button">View more</a>
+				</div>
+				-->
+			</div>
             <!--
 			<div class="books-brand-button">
 				<a href="#" class="brand-button">View more</a>
