Nav updated to inclue b4tbr link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="site-navigation-inner site-container">
             <div class="main-navigation">
                 <ul class="main-navigation__ul">
-                    <li><a href="/">Homepage</a></li>
+					<li><a href="index.html">Homepage</a></li>
+					<li><a href="books/before-the-bell-rings.html">Before the Bell Rings</a></li>
                     <li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
                     <li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
                 </ul>
