Upcoming book pictures, changed main pictures

--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -93,7 +93,7 @@
             <li>1 t salt </li>
             <li>2 dashes cayenne pepper</li>
             <li>1 t sugar</li>
-            <li>1/2 t mustard seed</li>
+            <li>1/2 t ground mustard seed</li>
         </ul>
         <br>
         <p><em>
