--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="fh5co-top-banner">
         <div class="top-banner__inner site-container">
             <div class="top-banner__image">
-                <img src="./images/top-banner-author.jpg" alt="author image">
+                <img src="images/spice.jpg" alt="author image">
             </div>
             <div class="top-banner__text">
                 <div class="top-banner__text-up">
@@ -71,14 +71,14 @@
         <div class="about-me-inner site-container">
             <article class="portfolio-wrapper">
                 <div class="portfolio__img">
-                    <img src="./images/about-me.jpg" class="about-me__profile" alt="about me profile picture">
+                    <img src="https://images.ctfassets.net/3s5io6mnxfqz/3pLESMFjNopcam5J5qGcoT/0427544b060a8fd29e3c0b68281d56cf/AdobeStock_191057762.jpeg" class="about-me__profile" alt="about me profile picture">
                 </div>
                 <div class="portfolio__bottom">
                     <div class="portfolio__name">
                         <span>J</span>
                         <h2 class="universal-h2">enna Ambrose</h2>
                     </div>
-                    <p>Jenna Ambrose is a current event</p>
+                    <p>Jenna Ambrose loves cooking, textile arts, raising children and writing stories.</p>
                 </div>
             </article>
             <div class="about-me__text">
@@ -127,6 +127,7 @@
 			<div class="site-container">
 				<h2 class="universal-h2 universal-h2-bckg">Upcoming Book</h2>
 				<div class="books">
+					<img class="citypic" src="images/city.jpg" alt="City">
 					<div class="single-book">
 						<h3 class="upcoming-book">City of Refuge</h3>
 						<p class="smaller">
@@ -167,7 +168,7 @@
                 </div>
             </div>
             <div class="single-count">
-                <span class="count" data-count="12"></span>
+                <span class="count" data-count="6"></span>
                 <div class="single-count__text">
                     <img src="./images/counter-3.png" alt="counter icon">
                     <p>Sales</p>
@@ -176,9 +177,34 @@
         </div>
     </div>
     <!-- Counter -->
+	
+    <!-- Quotes -->
+    <section class="fh5co-quotes">
+        <div class="site-container">
+            <div class="about-me-slider">
+                <div>
+                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
+                    <p>I really enjoyed this book!!! It is one of the best books I have ever read, with lots of adventure and a good romance! Character development is excellent! If you like clean romance mixed with a hint of mystery and a lot of excitement,
+                        this book is definitely for you! It is an easy and fun read, and you will be sad when you finish it.</p>
+                    <img src="./images/quotes.svg" alt="quotes svg">
+                    <h4>Emily Gray</h4>
+                    <p>Reader</p>
+                </div>
+                <div>
+                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
+                    <p>I've read a lot of books and this one was amazing! I couldn't put it down. I would definitely recommend this book for anyone!</p>
+                    <img src="./images/quotes.svg" alt="quotes svg">
+                    <h4>Noah Broyles</h4>
+                    <p>Reader</p>
+                </div>
+            </div>
+        </div>
+    </section>
+	<!-- Quotes end -->
+	
 	<div class="book-recommendations">
 		<div class="content">
-			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
+			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am not just a writer, but a reader as well. Here is a list of books that I really love.
 				If you have a recommendation for me I would love to hear about it.
 			</p>
 			<br>
@@ -200,9 +226,8 @@
 				<li><em>To Kill a Mockingbird</em>, Harper Lee</li>
 			</ul>
 			<br>
-			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post in the comments below, or any other comments you would like to make!</p>
 			<p class="indent">
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many of you know that I have 5 children, and I make them read a lot. Also, I love to read aloud to the little ones. Sometimes it can be difficult to find good books at the library. Here is a list of books that I have found to be good, starting with the wee little ones and progressing in age:
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have 5 children, and I make them read a lot. Also, I love to read aloud to the little ones. Sometimes it can be difficult to find good books at the library. Here is a list of books that I have found to be good, starting with the wee little ones and progressing in age:
 			</p>
 			<br>
 			<ul>
@@ -240,32 +265,9 @@
 				<li>Books by Horatio Alger</li>
 				<li>Books by G.A. Henty</li>
 			</ul>
+			<p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post in the comments below, or any other comments you would like to make!</p>
 		</div>
 	</div>
-	
-    <!-- Quotes -->
-    <section class="fh5co-quotes">
-        <div class="site-container">
-            <div class="about-me-slider">
-                <div>
-                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
-                    <p>I really enjoyed this book!!! It is one of the best books I have ever read, with lots of adventure and a good romance! Character development is excellent! If you like clean romance mixed with a hint of mystery and a lot of excitement,
-                        this book is definitely for you! It is an easy and fun read, and you will be sad when you finish it.</p>
-                    <img src="./images/quotes.svg" alt="quotes svg">
-                    <h4>Emily Gray</h4>
-                    <p>Reader</p>
-                </div>
-                <div>
-                    <h2 class="universal-h2 universal-h2-bckg">What People Are Saying</h2>
-                    <p>I've read a lot of books and this one was amazing! I couldn't put it down. I would definitely recommend this book for anyone!</p>
-                    <img src="./images/quotes.svg" alt="quotes svg">
-                    <h4>Noah Broyles</h4>
-                    <p>Reader</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Quotes end -->
 
     <!-- Footer -->
     <footer class="site-footer">
