--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="books">
                 <div class="single-book">
                     <a href="./books/before-the-bell-rings.html" class="single-book__img">
-                        <img src="./images/beforeTheBellRings.jpg" width="200" alt="before the bell rings">
+                        <img src="images/b4thebellringscover.png" width="320" alt="before the bell rings">
                         <div class="single-book_download">
                             <img src="./images/download.svg" alt="book image">
                         </div>
