--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -25,7 +25,7 @@
                 <ul class="main-navigation__ul">
                     <li><a href="../">Homepage</a></li>
                     <li><a href="before-the-bell-rings.html">Before the Bell Rings</a></li>
-                    <li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
+                    <li><a href="mailto:2jennaambrose@gmail.com">Email Jenna</a></li>
                     <li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
                 </ul>
             </div>
